fix dark mode sidebar

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -33,6 +33,7 @@
   --primary: rgb(29, 147, 171);
   --second: rgb(27 38 42);
   --hover-color: #323232;
+  --sidebar-background: #333333;
 
   --bar-color: rgba(255, 255, 255, 0.1);
 
